Großflächige Überarbeitung: Operation "welcher Topicname?"
Topic-Namen werden jetzt in der Oberfläche nicht mehr angezeigt. So
entfällt die für Benutzer relativ verwirrende Unterscheidung zwischen
"Einträgen" und "Keywords".

Um Überladungen eines Keywords zu ermöglichen, wird bei Konflikten unten
im Tooltip eine Liste anderer Definitionen für das gleiche Keyword
angezeigt. Mittels dieser Liste kann man die anderen Definitionen
ansehen.

Im Übrigen enthält diese Überarbeitung eine verbesserte Erkennung von
Wortgrenzen unter Zuhilfenahme der XRegExp-Library (und dem
Unicode-Base-Addon davon). Alles, was kein Buchstabe irgendeiner Art
ist, kann als Abgrenzung verwendet werden.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /GlossarPlugin*
+pub/System/GlossarPlugin/jquery.thesaurus.js
+pub/System/GlossarPlugin/jquery.thesaurus_de.js
+pub/System/GlossarPlugin/jquery.thesaurus_en.js
+pub/System/GlossarPlugin/xregexp.js
+pub/System/GlossarPlugin/unicode-base.js
