Anpassung an Rollenmanagement-App, Umbenennung Glossar->Glossary

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ pub/System/GlossarPlugin/jquery.thesaurus_de.js
 pub/System/GlossarPlugin/jquery.thesaurus_en.js
 pub/System/GlossarPlugin/xregexp.js
 pub/System/GlossarPlugin/unicode-base.js
+pub/System/GlossarPlugin/jquery.thesaurus.js
+pub/System/GlossarPlugin/unicode-base.js
+pub/System/GlossarPlugin/jquery.thesaurus_en.js
+pub/System/GlossarPlugin/jquery.thesaurus_de.js
+pub/System/GlossarPlugin/xregexp.js
